--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" href="./images/icon.ico">
+    <link rel="icon" href="./images/image-2.ico">
     <title>tocha</title>
 </head>
 
@@ -28,12 +28,10 @@
                     </div>
                     <i class="bi bi-list">
                         <i class="bi bi-x-lg">
-                            <ul>
-                                <li>Подключение</li>
-                                <li>Оплата</li>
-                                <li>Контакты</li>
-                                <li>Выход</li>
-                            </ul>
+                            <a href="#">Подключение</a>
+                            <a href="#">Оплата</a>
+                            <a href="#">Контакты</a>
+                            <a href="#">Выход</a>                            
                         </i>
                     </i>
                 </div>
@@ -60,28 +58,28 @@
                 <h2>Tocha Online — это</h2>
                 <div class="desc__wrapper">
                     <div class="desc__card">
-                        <img src="./images/qush.png" alt="img">
+                        <img src="./images/qush.svg" alt="img">
                         <div>
                             <h4>Ничего лишнего</h4>
                             <p>Отсутствие лишних приложений для операторов. Оператору не нужно учиться работать c чатом</p>
                         </div>
                     </div>
                     <div class="desc__card">
-                        <img src="./images/develop.png" alt="img">
+                        <img src="./images/develop.svg" alt="img">
                         <div>
                             <h4>Простота</h4>
                             <p>Простая установка на сайт</p>
                         </div>
                     </div>
                     <div class="desc__card">
-                        <img src="./images/money.png" alt="img">
+                        <img src="./images/money.svg" alt="img">
                         <div>
                             <h4>Несколько ассистентов</h4>
                             <p>Возможность подключения нескольких ассистентов</p>
                         </div>
                     </div>
                     <div class="desc__card">
-                        <img src="./images/professor.png" alt="img">
+                        <img src="./images/professor.svg" alt="img">
                         <div>
                             <h4>Кастомизация</h4>
                             <p>Настройка интерфейса под нужды сайта</p>
@@ -89,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./images/phone img.png" alt="img" class="desc__img">
+            <img src="./images/telegram_phone_img.svg" alt="img" class="desc__img">
         </section>
 
         <!-- tariff -->
@@ -135,19 +133,19 @@
                         <span>1</span>
                         <h3>Telegram bot</h3>
                         <p>Вы создаёте Telegram бота для вашего сайта</p>
-                        <img src="./images/iPhone X.png" alt="img">
+                        <img src="./images/iPhone_X.svg" alt="img">
                     </div>
                     <div class="telegram__card telegram__card--middle">
                         <span>2</span>
                         <h3>Подключение Tocha</h3>
                         <p>Tocha подключает Telegram бота к вашиму сайту</p>
-                        <img src="./images/iPhone S.png" alt="img">
+                        <img src="./images/iPhone_S.svg" alt="img">
                     </div>
                     <div class="telegram__card telegram__card--margin">
                         <span>3</span>
                         <h3>Telegram-чат</h3>
                         <p>Консультант отвечает на вопросы посетителей сайта</p>
-                        <img src="./images/iPhone A.png" alt="img">
+                        <img src="./images/iPhone_A.svg" alt="img">
                     </div>
                 </div>
                 <div class="telegram__scroll">
@@ -175,7 +173,7 @@
                             <span></span>
                         </div>
                         <div class="comment__author">
-                            <img src="./images/girl.png" alt="img">
+                            <img src="./images/girl.svg" alt="img">
                             <div>
                                 <h5>Анна Купер</h5>
                                 <p>romashka.ru</p>
@@ -189,7 +187,7 @@
                             <span></span>
                         </div>
                         <div class="comment__author">
-                            <img src="./images/boy.png" alt="img">
+                            <img src="./images/boy.svg" alt="img">
                             <div>
                                 <h5>Андрей Васильев</h5>
                                 <p>samogon-ont.ru</p>
@@ -209,7 +207,7 @@
 
         <section class="email__border container">
             <div class="email">
-                <img src="./images/phone on hend.png" alt="img">
+                <img src="./images/email_img.svg" alt="img">
                 <div>
                     <h2>Подключите Telegram чат уже сегодня</h2>
                     <form>
@@ -225,7 +223,7 @@
 
     <footer class="footer__bg">
         <div class="footer container">
-            <img src="./images/last logo.png" alt="img">
+            <img src="./images/footer_logo.svg" alt="img">
             <div class="footer__wrapper">
                 <div class="footer__wrapper--link footer--telegram">
                     <h4>Telegram чат</h4>
